# templight

./: CMakeLists.txt  Makefile  PrintableTemplightEntries.h  README.md  TemplightAction.cpp  TemplightAction.h  TemplightDebugger.cpp  TemplightDebugger.h  TemplightProtobufReader.cpp  TemplightProtobufReader.h  TemplightProtobufWriter.cpp  TemplightProtobufWriter.h  TemplightTracer.cpp  TemplightTracer.h  ThinProtobuf.h  templight_clang_patch.diff  templight_clang_patch_with_context.diff  templight_clang_version.txt  templight_driver.cpp  templight_messages.proto  templight_symlink.cmake
convert/: CMakeLists.txt  TemplightEntryPrinter.cpp  TemplightEntryPrinter.h  TemplightExtraWriters.cpp  TemplightExtraWriters.h  templight_convert.cpp
include/: PrintableTemplightEntries.h  TemplightAction.h  TemplightDebugger.h  TemplightEntryPrinter.h  TemplightProtobufWriter.h  TemplightTracer.h  ThinProtobuf.h
lib/: CMakeLists.txt  PrintableTemplightEntries.h  TemplightAction.cpp  TemplightAction.h  TemplightDebugger.cpp  TemplightDebugger.h  TemplightEntryPrinter.cpp  TemplightEntryPrinter.h  TemplightExtraWriters.cpp  TemplightProtobufReader.cpp  TemplightProtobufWriter.cpp  TemplightTracer.cpp  TemplightTracer.h  ThinProtobuf.h
libtemplight/: CMakeLists.txt  TemplightAPI.cpp  TemplightAPI.h  libtemplight.exports
plugin/: CMakeLists.txt  TemplightPluginActions.cpp  TemplightPluginActions.h
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in  templight-driver-flag.cpp  templight_as_compiler.cpp
test/Unit/: lit.cfg.py  lit.site.cfg.py.in
unittests/: CMakeLists.txt  TemplightActionTest.cpp
utils/: create_patch.sh  format.sh
utils/ExtraWriters/: TemplightExtraWriters.cpp  TemplightExtraWriters.h
utils/ProtobufReader/: TemplightProtobufReader.cpp  TemplightProtobufReader.h
